# resume-site

./: CLAUDE.md  README.MD  dockerfile
resume_project/: .env.example  README.md  db.sqlite3  pyproject.toml
resume_project/core/: admin.py  models.py  urls.py  views.py
resume_project/core/fixtures/: description_items.json  jobs.json  projects.json
resume_project/core/migrations/: 0001_initial.py  0002_descriptionitem_job_delete_todoitem_and_more.py  0002_skillitem_projects.py  0003_alter_job_date_ended.py  0004_job_company.py  0005_project.py  0006_project_github_link.py  0007_skillitem.py  0008_remove_skillitem_job_skillitem_jobs.py  0009_alter_job_options.py  0010_alter_job_options.py  0011_alter_job_options_job_current.py
resume_project/core/static/: styles.css
resume_project/core/static/js/: carousel.js  particles.js  pills.js
resume_project/core/templates/: base.html  contact.html  home.html  jobs.html  project_card.html  projects.html  projects_alternative.html
resume_project/resume_project/: settings.py  urls.py
